force-app/main/default/objects/UUID_Log_Entry__c/UUID_Log_Entry__c.object-meta.xml
<CustomObject>
    <description>Used to generate and capture UUID values when Salesforce is making requests to external systems</description>
    <label>UUID Log Entry</label>
    <nameField>
        <label>UUID Log Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UUID Log Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>