force-app/main/default/objects/UUID_Log_Entry__c/fields/Hash_Payload__c.field-meta.xml
<CustomField>
    <fullName>Hash_Payload__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Hash value generated while making request</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Hash Payload</label>
    <length>255</length>
    <type>Text</type>
</CustomField>