force-app/main/default/objects/UUID_Log_Entry__c/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Record Id specific to use case</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>