force-app/main/default/objects/UUID_Log_Entry__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>List of use cases based on functionalities</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOH - Credit Referral - Reassess</fullName>
            </value>
            <value>
                <fullName>BOH - Credit Referral - Referral Outcome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>