force-app/main/default/objects/UUID_Log_Entry__c/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The UUID value created based on request made</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>